--- a/program 4.html
+++ b/program 4.html
@@ -6,7 +6,9 @@
     <title>Registration Form Validation</title>
     <style>
       .error {
-        color
+        color:red;
+      }
+        </style>
   </head>
   <body>
     <h2>Registration Form</h2>
